phpMyFAQ 2.8.0-dev
Codename "Perdita"

CHANGELOG

This is a log of major user-visible changes in each phpMyFAQ release.

Version 2.8.0-dev - 2012-
- added improved advanced search in subcategories (Thorsten)
- improved usability of administration backend (Thorsten)

Version 2.7.2 - 2011-12-
- improved install script (Thorsten)
- updated Finnish translation (Petteri Hirvonen, Niklas Lampén)
- updated French translation (Cédric Frayssinet)
- updated Chinese (Simplified) translation
- updated bundled TCPDF library to version 5.9.136 (Thorsten)
- updated bundled jQuery datePicker plugin (Thorsten)
- fixed some bugs (Thorsten)

Version 2.7.1 - 2011-10-25
- fixed security issue in bundled ImageManager library (Thorsten)
- added missing translations (Thorsten)
- added configurable encryption type for passwords (Thorsten)
- added support for anonymous login for LDAP servers (Thorsten)
- added table of contents in PDF exports (Thorsten)
- fixed some bugs (Thorsten)

Version 2.7.0 - 2011-09-30
- changed PHP requirement to PHP 5.2.3 (Thorsten)
- dropped support for MySQL 4.1 (Thorsten)
- dropped support for Internet Explorer 6 + 7 (Thorsten)
- dropped support for obsolete Microsummaries (Thorsten)
- added new HTML5/CSS3 powered layout and administration backend (Thorsten)
- added configurable search relevance functionality (Gustavo Solt)
- added automatic translations with Google Translate (Gustavo Solt)
- added Twitter support (Thorsten, Thomas Zeithaml)
- added Facebook Like Button support (Thorsten)
- added "Bookmark on Delicious" support (Thorsten)
- added attachment administration frontend (Anatoliy)
- added basic authentication support for LDAP groups (Thorsten)
- added basic support for HTML5 microdata (Thorsten)
- added functionality of the TinyMCE save button (Gustavo Solt)
- added basic reporting functionality (Gustavo Solt, Thorsten)
- added IPv6 support (David Soria Parra)
- added support for Single Sign On authentication (Thorsten)