@@ -439,7 +439,7 @@ if (!isset($_POST["sql_server"]) && !isset($_POST["sql_user"]) && !isset($_POST[
             </p>
             <p>
                 <label>Your login:</label>
-                <input type="text" name="username" title="Please enter your login name for your phpMyFAQ installation." required="required" />
+                <input type="text" name="loginname" title="Please enter your login name for your phpMyFAQ installation." required="required" />
             </p>
             <p>
                 <label>Your password:</label>
@@ -469,11 +469,11 @@ if (!isset($_POST["sql_server"]) && !isset($_POST["sql_user"]) && !isset($_POST[
     }
 
     // check database entries
-    $sql_type = PMF_Filter::filterInput(INPUT_POST, 'sql_type', FILTER_SANITIZE_STRING);
-    if (!is_null($sql_type)) {
-        $sql_type = trim($sql_type);
-        if (file_exists(PMF_ROOT_DIR . '/install/' . $sql_type . '.sql.php')) {
-            require PMF_ROOT_DIR . '/install/' . $sql_type . '.sql.php';
+    $dbType = PMF_Filter::filterInput(INPUT_POST, 'sql_type', FILTER_SANITIZE_STRING);
+    if (!is_null($dbType)) {
+        $dbType = trim($dbType);
+        if (file_exists(PMF_ROOT_DIR . '/install/' . $dbType . '.sql.php')) {
+            require PMF_ROOT_DIR . '/install/' . $dbType . '.sql.php';
         } else {
             print '<p class="error"><strong>Error:</strong> Invalid server type.</p>';
             HTMLFooter();
@@ -485,37 +485,37 @@ if (!isset($_POST["sql_server"]) && !isset($_POST["sql_user"]) && !isset($_POST[
         die();
     }
 
-    $sql_server = PMF_Filter::filterInput(INPUT_POST, 'sql_server', FILTER_SANITIZE_STRING);
-    if (is_null($sql_server) && $sql_type != 'sqlite') {
+    $dbServer = PMF_Filter::filterInput(INPUT_POST, 'sql_server', FILTER_SANITIZE_STRING);
+    if (is_null($dbServer) && $dbType != 'sqlite') {
         print "<p class=\"error\"><strong>Error:</strong> There's no DB server input.</p>\n";
         HTMLFooter();
         die();
     }
 
-    $sql_user = PMF_Filter::filterInput(INPUT_POST, 'sql_user', FILTER_SANITIZE_STRING);
-    if (is_null($sql_user) && $sql_type != 'sqlite') {
+    $dbUser = PMF_Filter::filterInput(INPUT_POST, 'sql_user', FILTER_SANITIZE_STRING);
+    if (is_null($dbUser) && $dbType != 'sqlite') {
         print "<p class=\"error\"><strong>Error:</strong> There's no DB username input.</p>\n";
         HTMLFooter();
         die();
     }
 
-    $sql_passwort = PMF_Filter::filterInput(INPUT_POST, 'sql_passwort', FILTER_SANITIZE_STRING);
-    if (is_null($sql_passwort) && $sql_type == 'sqlite') {
+    $dbPassword = PMF_Filter::filterInput(INPUT_POST, 'sql_passwort', FILTER_SANITIZE_STRING);
+    if (is_null($dbPassword) && $dbType == 'sqlite') {
         // Password can be empty...
-        $sql_passwort = '';
+        $dbPassword = '';
     }
 
-    $sql_db = PMF_Filter::filterInput(INPUT_POST, 'sql_db', FILTER_SANITIZE_STRING);
-    if (is_null($sql_db) && $sql_type != 'sqlite') {
+    $dbDatabaseName = PMF_Filter::filterInput(INPUT_POST, 'sql_db', FILTER_SANITIZE_STRING);
+    if (is_null($dbDatabaseName) && $dbType != 'sqlite') {
         print "<p class=\"error\"><strong>Error:</strong> There's no DB database input.</p>\n";
         HTMLFooter();
         die();
     }
 
-    if ($sql_type == 'sqlite') {
-        $sql_sqllitefile = PMF_Filter::filterInput(INPUT_POST, 'sql_sqlitefile', FILTER_SANITIZE_STRING);
-        if (!is_null($sql_sqllitefile)) {
-            $sql_server = $sql_sqllitefile; // We're using $sql_server, too!
+    if ($dbType == 'sqlite') {
+        $sqliteFile = PMF_Filter::filterInput(INPUT_POST, 'sql_sqlitefile', FILTER_SANITIZE_STRING);
+        if (!is_null($sqliteFile)) {
+            $dbServer = $sqliteFile; // We're using $dbServer, too!
         } else {
             print "<p class=\"error\"><strong>Error:</strong> There's no SQLite database filename input.</p>\n";
             HTMLFooter();
@@ -526,8 +526,8 @@ if (!isset($_POST["sql_server"]) && !isset($_POST["sql_user"]) && !isset($_POST[
     // check database connection
     require PMF_ROOT_DIR . "/inc/Db.php";
     require PMF_ROOT_DIR . "/inc/PMF_DB/Driver.php";
-    $db = PMF_Db::factory($sql_type);
-    $db->connect($sql_server, $sql_user, $sql_passwort, $sql_db);
+    $db = PMF_Db::factory($dbType);
+    $db->connect($dbServer, $dbUser, $dbPassword, $dbDatabaseName);
     if (!$db) {
         print "<p class=\"error\"><strong>DB Error:</strong> ".$db->error()."</p>\n";
         HTMLFooter();
@@ -535,59 +535,58 @@ if (!isset($_POST["sql_server"]) && !isset($_POST["sql_user"]) && !isset($_POST[
     }
 
     // check LDAP if available
-    $ldap_enabled = PMF_Filter::filterInput(INPUT_POST, 'ldap_enabled', FILTER_SANITIZE_STRING);
-    if (extension_loaded('ldap') && !is_null($ldap_enabled)) {
+    $ldapEnabled = PMF_Filter::filterInput(INPUT_POST, 'ldap_enabled', FILTER_SANITIZE_STRING);
+    if (extension_loaded('ldap') && !is_null($ldapEnabled)) {
 
         // check LDAP entries
-        $ldap_server = PMF_Filter::filterInput(INPUT_POST, 'ldap_server', FILTER_SANITIZE_STRING);
-        if (is_null($ldap_server)) {
+        $ldapServer = PMF_Filter::filterInput(INPUT_POST, 'ldap_server', FILTER_SANITIZE_STRING);
+        if (is_null($ldapServer)) {
             print "<p class=\"error\"><strong>Error:</strong> There's no LDAP server input.</p>\n";
             HTMLFooter();
             die();
         }
         
-        $ldap_port = PMF_Filter::filterInput(INPUT_POST, 'ldap_port', FILTER_VALIDATE_INT);
-        if (is_null($ldap_port)) {
+        $ldapPort = PMF_Filter::filterInput(INPUT_POST, 'ldap_port', FILTER_VALIDATE_INT);
+        if (is_null($ldapPort)) {
             print "<p class=\"error\"><strong>Error:</strong> There's no LDAP port input.</p>\n";
             HTMLFooter();
             die();
         }
-        
-        $ldap_user = PMF_Filter::filterInput(INPUT_POST, 'ldap_user', FILTER_SANITIZE_STRING);
-        if (is_null($ldap_user)) {
-            print "<p class=\"error\"><strong>Error:</strong> There's no LDAP user DN input.</p>\n";
-            HTMLFooter();
-            die();
-        }
-        
-        $ldap_password = PMF_Filter::filterInput(INPUT_POST, 'ldap_password', FILTER_SANITIZE_STRING);
-        if (is_null($ldap_password)) {
-            print "<p class=\"error\"><strong>Error:</strong> There's no LDAP password input.</p>\n";
-            HTMLFooter();
-            die();
-        }
-        
-        $ldap_base = PMF_Filter::filterInput(INPUT_POST, 'ldap_base', FILTER_SANITIZE_STRING);
-        if (is_null($ldap_base)) {
+
+        $ldapBase = PMF_Filter::filterInput(INPUT_POST, 'ldap_base', FILTER_SANITIZE_STRING);
+        if (is_null($ldapBase)) {
             print "<p class=\"error\"><strong>Error:</strong> There's no LDAP base search DN input.</p>\n";
             HTMLFooter();
             die();
         }
 
+        // LDAP User and LDAP password are optional
+        $ldapUser     = PMF_Filter::filterInput(INPUT_POST, 'ldap_user', FILTER_SANITIZE_STRING, '');
+        $ldapPassword = PMF_Filter::filterInput(INPUT_POST, 'ldap_password', FILTER_SANITIZE_STRING, '');
+
         // check LDAP connection
         require PMF_ROOT_DIR . "/inc/Ldap.php";
-        $ldap = new PMF_Ldap($ldap_server, $ldap_port, $ldap_base, $ldap_user, $ldap_password);
+        $ldap = new PMF_Ldap($ldapServer, $ldapPort, $ldapBase, $ldapUser, $ldapPassword);
         if (!$ldap) {
-            print "<p class=\"error\"><strong>LDAP Error:</strong> ".$ldap->error()."</p>\n";
+            print "<p class=\"error\"><strong>LDAP Error:</strong> " . $ldap->error() . "</p>\n";
             HTMLFooter();
             die();
         }
     }
 
+    // check loginname
+    $loginname = PMF_Filter::filterInput(INPUT_POST, 'loginname', FILTER_SANITIZE_STRING);
+    if (is_null($loginname)) {
+        print '<p class="error"><strong>Error:</strong> There\'s no loginname for your account.' .
+                ' Please set your loginname.</p>';
+        HTMLFooter();
+        die();
+    }
+
     // check user entries
     $password = PMF_Filter::filterInput(INPUT_POST, 'password', FILTER_SANITIZE_STRING);
     if (is_null($password)) {
-        print '<p class="error"><strong>Error:</strong> There\'s no password for the administrator\'s account.' .
+        print '<p class="error"><strong>Error:</strong> There\'s no password for the your account.' .
               ' Please set your password.</p>';
         HTMLFooter();
         die();
@@ -623,12 +622,12 @@ if (!isset($_POST["sql_server"]) && !isset($_POST["sql_user"]) && !isset($_POST[
     $datafile = PMF_ROOT_DIR . '/config/database.php';
     $ret = file_put_contents(
         $datafile,
-        "<?php\n\$DB[\"server\"] = '" . $sql_server . "';\n" .
-        "\$DB[\"user\"] = '" . $sql_user . "';\n" .
-        "\$DB[\"password\"] = '" . $sql_passwort . "';\n" .
-        "\$DB[\"db\"] = '" . $sql_db . "';\n" .
+        "<?php\n\$DB[\"server\"] = '" . $dbServer . "';\n" .
+        "\$DB[\"user\"] = '" . $dbUser . "';\n" .
+        "\$DB[\"password\"] = '" . $dbPassword . "';\n" .
+        "\$DB[\"db\"] = '" . $dbDatabaseName . "';\n" .
         "\$DB[\"prefix\"] = '" . $sqltblpre . "';\n" .
-        "\$DB[\"type\"] = '" . $sql_type . "';",
+        "\$DB[\"type\"] = '" . $dbType . "';",
         LOCK_EX
     );
     
@@ -640,15 +639,15 @@ if (!isset($_POST["sql_server"]) && !isset($_POST["sql_user"]) && !isset($_POST[
     }
 
     // check LDAP if available
-    if (extension_loaded('ldap') && !is_null($ldap_enabled)) {
+    if (extension_loaded('ldap') && !is_null($ldapEnabled)) {
         $datafile = PMF_ROOT_DIR . '/config/ldap.php';
         $ret = file_put_contents(
             $datafile,
-            "<?php\n\$PMF_LDAP[\"ldap_server\"] = '" . $ldap_server . "';\n" .
-            "\$PMF_LDAP[\"ldap_port\"] = '" . $ldap_port . "';\n" .
-            "\$PMF_LDAP[\"ldap_user\"] = '" . $ldap_user . "';\n" .
-            "\$PMF_LDAP[\"ldap_password\"] = '" . $ldap_password . "';\n" .
-            "\$PMF_LDAP[\"ldap_base\"] = '" . $ldap_base . "';",
+            "<?php\n\$PMF_LDAP[\"ldap_server\"] = '" . $ldapServer . "';\n" .
+            "\$PMF_LDAP[\"ldap_port\"] = '" . $ldapPort . "';\n" .
+            "\$PMF_LDAP[\"ldap_user\"] = '" . $ldapUser . "';\n" .
+            "\$PMF_LDAP[\"ldap_password\"] = '" . $ldapPassword . "';\n" .
+            "\$PMF_LDAP[\"ldap_base\"] = '" . $ldapBase . "';",
             LOCK_EX
         );
         if (!$ret) {
@@ -661,7 +660,7 @@ if (!isset($_POST["sql_server"]) && !isset($_POST["sql_user"]) && !isset($_POST[
 
     // connect to the database using inc/data.php
     require PMF_ROOT_DIR . '/config/database.php';
-    $db = PMF_Db::factory($sql_type);
+    $db = PMF_Db::factory($dbType);
     $db->connect($DB['server'], $DB['user'], $DB['password'], $DB['db']);
     if (!$db) {
         print "<p class=\"error\"><strong>DB Error:</strong> ".$db->error()."</p>\n";
@@ -670,25 +669,25 @@ if (!isset($_POST["sql_server"]) && !isset($_POST["sql_user"]) && !isset($_POST[
         die();
     }
 
-    require_once $sql_type . '.sql.php'; // CREATE TABLES
+    require_once $dbType . '.sql.php'; // CREATE TABLES
     require_once 'config.sql.php';       // INSERTs for configuration
     require_once 'stopwords.sql.php';    // INSERTs for stopwords
 
     print '<p>';
 
     // Erase any table before starting creating the required ones
-    if ('sqlite' != $sql_type) {
+    if ('sqlite' != $dbType) {
         db_uninstall();
     }
     // Start creating the required tables
     $count = 0;
-    while ($each_query = each($query)) {
-        $result = @$db->query($each_query[1]);
+    foreach ($query as $executeQuery) {
+        $result = @$db->query($executeQuery);
         if (!$result) {
             print '<p class="error"><strong>Error:</strong> Please install your version of phpMyFAQ once again or send
             us a <a href=\"http://www.phpmyfaq.de\" target=\"_blank\">bug report</a>.</p>';
             printf('<p class="error"><strong>DB error:</strong> %s</p>', $db->error());
-            printf('<code>%s</code>', htmlentities($each_query[1]));
+            printf('<code>%s</code>', htmlentities($executeQuery));
             db_uninstall();
             cleanInstallation();
             HTMLFooter();
@@ -703,7 +702,7 @@ if (!isset($_POST["sql_server"]) && !isset($_POST["sql_user"]) && !isset($_POST[
 
     // add admin account and rights
     $admin = new PMF_User();
-    $admin->createUser('admin', $password, 1);
+    $admin->createUser($loginname, $password, 1);
     $admin->setStatus('protected');
     $adminData = array(
         'display_name' => $realname,
@@ -983,6 +982,7 @@ if (!isset($_POST["sql_server"]) && !isset($_POST["sql_user"]) && !isset($_POST[
         $rightID = $admin->perm->addRight($right);
         $admin->perm->grantUserRight($adminID, $rightID);
     }
+    
     // Add anonymous user account
     $anonymous = new PMF_User();
     $anonymous->createUser('anonymous', null, -1);
